style.css
body {
  background-color: white;
  font-family: Arial, Helvetica, sans-serif;
}

header {
  border-bottom: solid 1px rgb(90, 89, 78);
  margin-bottom: 20px;
}

header p {
  padding-left: 20px;
}

h1, h2 {
  padding-left: 20px;
  font-family: "Bevan", serif;
  font-weight: 400;
  font-style: normal;
  position: relative;
}

.hide {
  display: none;
}

#subheading {
  text-align: center;
}

/* CATEGORIES */

#categories-container {
  display: grid;
  grid-template-columns: auto;
  gap: 8px;
  width: calc(3 * 8px + 4 * 150px);
  margin: auto;
  border: none;
  margin-bottom: 8px;
}

.category {
  height: 80px;
  border-radius: 6px;
  text-align: center;
  text-transform: uppercase;
}

.category p:first-child {
  padding-top: 5px;
}
.category p {
  font-size: 20px;
  line-height: 6px;
}

.category-name {
  font-weight: 700;
}

#category-1 {
  background-color: rgb(249, 223, 109);
}

#category-2 {
  background-color: rgb(160, 195, 90);
}

#category-3 {
  background-color: rgb(176, 196, 239);
}

#category-4 {
  background-color: rgb(186, 129, 197);
}

/* CARDS */

#cards-container {
  display: grid;
  grid-template-columns: auto auto auto auto;
  gap: 8px;
  width: calc(3 * 8px + 4 * 150px);
  margin: auto;
  border: none;
}

.card {
  background-color: rgb(239, 239, 230);
  width: 150px;
  height: 80px;
  border-radius: 6px;
  justify-content: center;
  align-content: center;
  display: flex;
  flex-wrap: wrap;
  font-size: 20px;
  font-weight: 700;
  cursor: pointer;
  text-transform: uppercase;
}

.tooltip {
  position: relative;
  display: inline-block;
  font-size: 12px;
}

.tooltip .tooltiptext {
  visibility: hidden;
  width: 120px;
  background-color: black;
  color: #fff;
  border-radius: 6px;
  padding: 5px;
  font-size: 12px;
  font-weight: 400;
  text-transform: none;
  
  /* Position the tooltip */
  position: absolute;
  z-index: 1;
  top: 10px;
  left: 75%;
}

.tooltip:hover .tooltiptext {
  visibility: visible;
}

.blank {
  border: solid 1px black;
  border-left: none;
  background-color: white;
  text-align: center;
  width: 16px;
  height: 18px;
  font-size: 0.8em;
  text-transform: uppercase;
  /* color: tomato; */
}

.blank:first-of-type {
  border-left: solid 1px black;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
}

.blank:last-of-type {
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
}

.wordle .blank {
  border: solid 1px rgb(211, 214, 218);
  background-color: black;
  color: white;
}

.selected {
  background-color: rgb(90, 89, 78);
  color: white;
}  

.selected .blank {
  border-top: solid white 0.5px;
  border-bottom: solid white 0.5px;
}

.bounce {
  animation: bounce 1s ease 1;
}
@keyframes bounce {
    70% { transform:translateY(0%); }
    80% { transform:translateY(-15%); }
    90% { transform:translateY(0%); }
    95% { transform:translateY(-7%); }
    97% { transform:translateY(0%); }
    99% { transform:translateY(-3%); }
    100% { transform:translateY(0); }
}

.shake {
  animation: shake 1s ease 0.5;
}

@keyframes shake {
	0%, 100% {transform: translateX(0);}
	10%, 30%, 50%, 70%, 90% {transform: translateX(-10px);}
	20%, 40%, 60%, 80% {transform: translateX(10px);}
}

/* GAME CONTROLLER */

fieldset {
  border:none;
}

#mistakes-container {
  margin: auto;
  width: calc(3 * 8px + 4 * 150px);
  text-align: center;
  padding: 20px;
}

#mistakes-container p {
  display: inline-block;
}

.dot {
  height: 16px;
  width: 16px;
  background-color: rgb(90, 89, 78);
  border-radius: 50%;
  display: inline-block;
  vertical-align: middle;
}

#game-controls-container {
  margin: auto;
  width: calc(3 * 8px + 4 * 150px);
  text-align: center;
}

input[type=button] {
  height: 3em;  
  background-color: white;
  border-radius: 32px;
  padding: 15px;
  text-transform: capitalize;
  border: solid 1px black;
  font-size: 16px;
  cursor: pointer;
}

#submit-btn:not([disabled]) {
  background-color: black;
  color: white;
}

/* PUZZLE */

.modal {
  width: 80%;
  height: 800px;
  background-color: white;
  border-radius: 6px;
  border: 1px solid black;
  position: fixed;
  top: 45%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.modal header {
  border-bottom: none;
  margin-bottom: 0px;
}

#close-puzzle-btn {
  background-color: white;
  border-radius: 6px;
  border: none;
  float: right;
  font-size: 1.2em;
  cursor: pointer;
  width: 50px;
  height: 50px;
}

#puzzle-title {
  text-transform: capitalize;
}

.message {
  text-align: center;
  background-color: black;
  color: white;
  width: 200px;
  padding: 10px;
  border-radius: 6px;
}

#game-message {
  top: 125px;
  left: 50%;
  transform: translate(-50%, 0);
  position: fixed;
}

#puzzle-message {
  margin: auto;
  margin-top: 100px;
}

.wordle-puzzle #puzzle-container {
  margin: auto;
  margin-top: 20px;
  width: 350px;
  height: 420px;
  display: grid;
  grid-template-columns: auto;
  grid-template-rows: auto auto auto auto auto auto;
  row-gap: 5px;
}

/* WORDLE */

.wordle-puzzle #crossword-submit-btn {
  display:none;
}

.row {
  display: grid;
  grid-template-columns: auto auto auto auto auto;
  column-gap: 5px;
}
 
.tile {
  background-color: rgba(255, 255, 255, 0.8);
  padding: 20px;
  text-align: center;
  border: solid 2px rgb(211, 214, 218);
  height: 30px;
  width: 30px;
  font-size: 32px;
  font-weight: 700;
  text-transform: uppercase;
}

.correct {
  background-color: rgb(106, 170, 100);
  border: solid 2px rgb(106, 170, 100);
  color: white;
}

.incorrect-position {
  background-color: rgb(201, 180, 88);
  border: solid 2px rgb(201, 180, 88);
  color: white;
}

.incorrect-letter {
  background-color: rgb(120, 124, 126);
  border: solid 2px rgb(120, 124, 126);
  color: white;
}

/* CROSSWORD */

.crossword-puzzle #puzzle-container {
  padding-left: 20px;
  display: grid;
  grid-template-columns: repeat(auto-fill, 60px);
}

.cell {
  background-color: white;
  border: 1px solid black;
  height: 40px;
  text-align:center;
  font-size: 36px;
  font-weight: 400;
  text-transform: uppercase;
  padding: 10px 0px;
}

.solved-cell {
  background-color: #a7d8ff;
}

#crossword-clue {
  padding-left: 20px;
}

#crossword-mistakes-container {
  padding-left: 20px;
}

#crossword-mistakes-container * {
  display: inline-block;
}

#crossword-submit-btn {
  margin: 20px;
  background-color: black;
  color: white;
  border: solid 1px white;
  width: 100px;
}

#crossword-submit-btn:disabled {
  background-color: white;
  color: rgba(0, 0, 0, 0.247);
  border: solid 1px black;
}

.crossword .blank {
  color: black;
}

.blank.reveal {
  color: tomato;
}

/* FOR REFERENCE ONLY - NOT IN USE */

.violet {
  color: rgb(186, 129, 197);
}

.green {
  color: rgb(106, 170, 100);
}

.blue {
  color: #a7d8ff;
}

.yellow {
  color: #ffda00;
}

.reference-colors {
  color: white;
  color: black;
  color: rgb(90, 89, 78);
  color: rgb(211, 214, 218);

  /* crossword */
  color: #dcefff;
  color: #ffda00;
  color: #a7d8ff;
  color: rgb(40, 96, 216);

  /* categories */
  color: rgb(249, 223, 109);
  color: rgb(160, 195, 90);
  color: rgb(176, 196, 239);
  color: rgb(186, 129, 197);

  /* wordle */
  color: rgb(201, 180, 88);
  color: rgb(106, 170, 100);
  color: rgb(120, 124, 126);

}

